# mytinymodel

./: .gitignore  .pre-commit-config.yaml  .vibe.json  .vibe.yaml  README.md  pyproject.toml
src/mytinymodel/: __init__.py  cli.py  evaluator.py  evaluator_test.py  model.py  model_test.py  trainer.py  trainer_test.py  utils.py
